--- a/src/Oragon.RabbitMQ.Abstractions/Oragon.RabbitMQ.Abstractions.csproj
+++ b/src/Oragon.RabbitMQ.Abstractions/Oragon.RabbitMQ.Abstractions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 
   <Import Project="./../Oragon.RabbitMQ.Build.props" />
@@ -6,5 +6,8 @@
     <Description>Defines the core abstractions for RabbitMQ message consumers. Offers a flexible foundation for extending and integrating custom RabbitMQ solutions.</Description>
   </PropertyGroup>
 
-
+  <ItemGroup>
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
+  </ItemGroup>
+  
 </Project>
