--- a/.editorconfig
+++ b/.editorconfig
@@ -96,7 +96,7 @@ csharp_using_directive_placement = outside_namespace:warning
 csharp_prefer_simple_using_statement = true:silent
 csharp_style_prefer_method_group_conversion = true:suggestion
 csharp_style_prefer_top_level_statements = true:silent
-csharp_style_prefer_primary_constructors = true:silent
+csharp_style_prefer_primary_constructors = false:silent
 csharp_style_expression_bodied_methods = false:silent
 csharp_style_expression_bodied_constructors = false:silent
 csharp_style_expression_bodied_operators = false:silent
