--- a/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
+++ b/samples/Aspire/DotNetAspireApp.AppHost/DotNetAspireApp.AppHost.csproj
@@ -28,8 +28,8 @@
     <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0" />    
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <Reference Include="$(TargetFramework)" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
